<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.leo09_000.house.Collection_ListView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top|center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left|fill"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancel_bt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/deny"
                android:visibility="gone" />

            <Button
                android:id="@+id/SelectAll"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/all"
                android:visibility="gone" />

            <Button
                android:id="@+id/fav_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/edit"
                android:visibility="visible" />
        </LinearLayout>

        <ListView
            android:id="@+id/fav_listview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </ListView>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
